# ub-g11-pml

./: .gitignore  README.md  requirements.txt
labs/lab6/: .gitignore  Lab 06 - Clustering.ipynb  pyproject.toml
projects/scene/: .gitignore  .~lock.results.csv#  pyproject.toml
projects/scene/output/: affinity_grid_search.csv
projects/scene/src/: classifier.py  feature_extraction.py  main.ipynb
projects/scene/submission/ionescu_andrei/: classifier.py  data.py  feature_extraction.py  main.py
projects/scene/work/: dbscan_1.txt  pml_2
projects/smart/: .gitignore  ideas.md  pyproject.toml
projects/smart/latex/: Untitled 1.ods  conf_matrix  filling-missing-values.drawio  haesvm_2_stage  hasevm_2_stage  missing_values  svm_hyperparam.csv.html  tcnn_diag.draw.io
projects/smart/src/: main.ipynb  test.ipynb  viz.ipynb
projects/smart/src/modules/: blocks.py  (+5 more)
projects/smart/submissions/: test_labels_1.csv  test_labels_10.csv  test_labels_11.csv  test_labels_12.csv  test_labels_13.csv  test_labels_14.csv  test_labels_15.csv  test_labels_16.csv  test_labels_17.csv  test_labels_18.csv  test_labels_19.csv  test_labels_2.csv  test_labels_20.csv  test_labels_21.csv  test_labels_22.csv  test_labels_23.csv  test_labels_24.csv  test_labels_25.csv  test_labels_26.csv  test_labels_27.csv  test_labels_28.csv  test_labels_29.csv  test_labels_30.csv  test_labels_31.csv  test_labels_32.csv  test_labels_33.csv  test_labels_34.csv  test_labels_35.csv  test_labels_36.csv  test_labels_37.csv  test_labels_38.csv  test_labels_39.csv  test_labels_4.csv  test_labels_40.csv  test_labels_41.csv  test_labels_42.csv  test_labels_43.csv  test_labels_44.csv  test_labels_5.csv  test_labels_6.csv  (+3 more)
(+12 files in other folders)
