[tool.poetry]
name = "lab6"
version = "0.1.0"
description = ""
authors = ["fusedbloxxer <voidwarden@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
nltk = "^3.8"
scikit-learn = "^1.2.0"
ipykernel = "^6.19.4"
scipy = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
