[tool.poetry]
name = "scene"
version = "0.1.0"
description = ""
authors = ["fusedbloxxer <voidwarden@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^1.2.0"
torchvision = "^0.14.1"
opencv-python = "^4.7.0.68"
scipy = "^1.10.0"
pandas = "^1.5.3"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
torch = "^1.13.1"
ipykernel = "^6.20.2"
scikit-image = "^0.19.3"
opencv-contrib-python = "^4.7.0.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
